Revert "fixed horizontal scroll on mobile"
This reverts commit 1eac61fef6f6f3b19c2eaf2236b9eefb6cece73d.

--- a/style/main.css
+++ b/style/main.css
@@ -120,7 +120,7 @@ footer nav ul li a:hover {
 /* menu styling */
 
 #menu {
-  width: 0%;
+  width: 100%;
   position: absolute;
   left: 0;
   top: 0;
@@ -132,11 +132,9 @@ footer nav ul li a:hover {
   z-index: 5;
   background-color: #fff;
   height: 100vh;
-  transition: all 0.6s ease 0s, width 0.1s ease 0.6s;
+  transition: all 0.6s ease;
   font-family: var(--headerFont);
   font-weight: 500;
-  opacity: 0;
-  visibility: hidden;
 }
 .menu-icon {
   aspect-ratio: 1/1;
@@ -149,10 +147,6 @@ footer nav ul li a:hover {
 
 .showMenu #menu {
   transform: translateX(0%);
-  opacity: 1;
-  visibility: visible;
-  width: 100%;
-  transition: all 0.6s ease 0s, width 0s ease 0s;
 }
 
 .showMenu .menu-icon {
@@ -224,9 +218,6 @@ nav li a {
     height: auto;
     color: #fff;
     font-size: 1.5rem;
-    visibility: visible;
-    width: 100%;
-    opacity: 1;
   }
   #menu label {
     display: initial;
@@ -255,7 +246,7 @@ nav li a {
     height: 14px;
     content: "";
     margin-left: 0.4rem;
-    background-image: url(../assets/icons/expand_more_white_24dp.svg);
+    background-image: url(/assets/icons/expand_more_white_24dp.svg);
     background-size: cover;
     background-position: center;
     transform: rotate(180deg);
@@ -348,11 +339,5 @@ nav li a {
   }
   .header-ico img:hover {
     opacity: 0.5;
-  }
-  /* class styling */
-
-  .logo {
-    width: 100px;
-    margin-bottom: 1rem;
   }
 }
